--- a/email-vps.html
+++ b/email-vps.html
@@ -42,13 +42,14 @@
 
     <div class="d-flex flex-column">
       <div class="profile">
-        <br><br>
+        <img src="assets/img/ribafs.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Meus livros</a></h1>
+      </div>
       </div>
 
       <nav class="nav-menu">
         <ul>
-          <li><a href="cakephp-app.html"><i class="bx bx-library"></i> <span>CakePHP 3 - Aplicativos</span></a></li>
+          <li><a href="#l"><i class="bx bx-library"></i> <span>CakePHP 3 - Aplicativos</span></a></li>
           <li><a href="cakephp3appext.html"><i class="bx bx-library"></i> <span>CakePHP 3 - Apps e Extensões</span></a></li>
           <li><a href="pg-pratico.html"><i class="bx bx-library"></i> <span>PostgreSQL Prático</span></a></li>
           <li><a href="sgbd-postgres.html"><i class="bx bx-library"></i>SGBD PostgreSQL</a></li>
@@ -72,65 +73,92 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section class="bg-white">
+  <section class="bg-white container">
     <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
 
-    <h4 class="text-center">Joomla 3 - Programação</h4>
-<br><br>
+    <h4 class="text-center">Servidores de e-mail para VPS</h4>
 <div class="text-left">
 
-<p>Programa&ccedil;&atilde;o para o Joomla 3. A maior parte &eacute; material da comunidade.</p>
+<p>Servidor Web e Servidor de E-mail para VPS
+(Mostra em passos simples como instalar e configurar o servidor e os serviços).</p>
 
-<p>Esclarecimentos&nbsp;&nbsp;&nbsp; 4<br />
-Agradecimentos&nbsp;&nbsp;&nbsp; 4<br />
-P&uacute;blico Alvo&nbsp;&nbsp;&nbsp; 5<br />
-1 &ndash; Introdu&ccedil;&atilde;o&nbsp;&nbsp;&nbsp; 6<br />
-Novidades sobre o Joomla&nbsp;&nbsp;&nbsp; 7<br />
-SEO e SEF&nbsp;&nbsp;&nbsp; 9<br />
-Ambiente de Programa&ccedil;&atilde;o Local&nbsp;&nbsp;&nbsp; 11<br />
-2 &ndash; Projeto&nbsp;&nbsp;&nbsp; 12<br />
-4 &ndash; Cria&ccedil;&atilde;o de Algumas extens&otilde;es&nbsp;&nbsp;&nbsp; 13<br />
-4.1 - Cria&ccedil;&atilde;o de Extens&otilde;es do tipo Ol&aacute; Mundo&nbsp;&nbsp;&nbsp; 14<br />
-4.2 - Criando um m&oacute;dulo simples para o Joomla 3&nbsp;&nbsp;&nbsp; 18<br />
-4.3 - Componente com a B&iacute;blia em 3 idiomas&nbsp;&nbsp;&nbsp; 21<br />
-4.4 &ndash; M&oacute;dulo da B&iacute;blia para o Novo Testamento&nbsp;&nbsp;&nbsp; 25<br />
-4.5 - Cria&ccedil;&atilde;o do Componente SimpleBackup&nbsp;&nbsp;&nbsp; 29<br />
-4.6 &ndash; Pensamento do Dia&nbsp;&nbsp;&nbsp; 37<br />
-4.7 - Criando um package para o Joomla&nbsp;&nbsp;&nbsp; 39<br />
-5 - Templates&nbsp;&nbsp;&nbsp; 40<br />
-5.1 &ndash; Dicas sobre a constru&ccedil;&atilde;o de Templates&nbsp;&nbsp;&nbsp; 40<br />
-5.2 - Exemplo simples de Template para o Site&nbsp;&nbsp;&nbsp; 46<br />
-5.3 - Cria&ccedil;&atilde;o de Template Funcional para o Joomla 3&nbsp;&nbsp;&nbsp; 47<br />
-Como chamar artigos pelo ID&nbsp;&nbsp;&nbsp; 72<br />
-Blanks&nbsp;&nbsp;&nbsp; 73<br />
-6 - Constantes da Biblioteca do Joomla&nbsp;&nbsp;&nbsp; 74<br />
-7 - Usu&aacute;rios na Programa&ccedil;&atilde;o&nbsp;&nbsp;&nbsp; 76<br />
-7.1 &ndash; ACL &ndash; Access Control List&nbsp;&nbsp;&nbsp; 80<br />
-8 - Bancos de Dados&nbsp;&nbsp;&nbsp; 81<br />
-8.1 - Tabelas nativas de um Joomla 3.8.1 rec&eacute;m instalado&nbsp;&nbsp;&nbsp; 89<br />
-8.2 - CRUD&nbsp;&nbsp;&nbsp; 92<br />
-9 - Trabalhando com Arquivos no Joomla 3&nbsp;&nbsp;&nbsp; 99<br />
-10 - Dicas de PHP e de Joomla&nbsp;&nbsp;&nbsp; 102<br />
-10.1 - Remover arquivo pela extens&atilde;o&nbsp;&nbsp;&nbsp; 103<br />
-10.2 - Remover diret&oacute;rio recursivamente&nbsp;&nbsp;&nbsp; 104<br />
-10.3 - Descompactar arquivo zip&nbsp;&nbsp;&nbsp; 104<br />
-10.4 - Compactar Pasta&nbsp;&nbsp;&nbsp; 105<br />
-10.5 - Override&nbsp;&nbsp;&nbsp; 107<br />
-10.6 - Sufixo de Classe de M&oacute;dulo&nbsp;&nbsp;&nbsp; 107<br />
-11 - Criadores de Aplicativos&nbsp;&nbsp;&nbsp; 110<br />
-11.1 - Fabrik&nbsp;&nbsp;&nbsp; 110<br />
-11.2 - Seblod&nbsp;&nbsp;&nbsp; 121<br />
-12 - Geradores de Componentes do tipo MVC&nbsp;&nbsp;&nbsp; 122<br />
-13 &ndash; Downloads no GitHub&nbsp;&nbsp;&nbsp; 128<br />
-14 - Como criar quickstart para Joomla 3&nbsp;&nbsp;&nbsp; 129<br />
-15 - Ferramentas&nbsp;&nbsp;&nbsp; 130<br />
-16 - Atualizar um site com Joomla 2.5 para o 3.8.1&nbsp;&nbsp;&nbsp; 134<br />
-Diret&oacute;rio Cache&nbsp;&nbsp;&nbsp; 135<br />
-17 - Refer&ecirc;ncias&nbsp;&nbsp;&nbsp; 137</p>
+<p><b>Objetivo do E-book</b>O objetivo é instalar um servidor que abrigue alguns sites, aplicativos e arquivos protegidos e também ofereça uma solução de e-mail simples com webmail juntamente com a configuração do DNS através do painel de administração. Também aborda como criar subdomínios, proteger pastas com senha e adicionar outros domínios ao mesmo servidor.</p>
+<pre>
+Sumário
+Prefácio.1
+Introdução......1
+1) Criar uma conta na hospedagem 5
+2) Nova Hospedagem do domínio ...5
+3) Criação da máquina virtual..5
+4) Configuração do DNS no painel administrativo da Hospedagem..7
+4.1) Migração do Domínio...7
+4.2) Exemplo de DNS no DigitalOcean ......9
+Zone File..10
+4.3) Exemplo de DNS no registro.br.15
+4.4) Exemplo de DNS no Amazon AWS....17
+5) Ajustes Iniciais........18
+5.1) Criação de um novo usuário para administrar o servidor e acessar via SSH ........18
+5.2) Mudar o fuso horário..19
+5.3) Criar uma partição de swap .....19
+6) Instalação do iRedMail como solução para e-mail. ......20
+6.1) Configurações Iniciais20
+6.2) Configuração DNS para SPF....20
+6.3) Configurar hostname..23
+6.4) Configurar hosts...23
+6.5) Instalação........23
+6.6) Desinstalação..30
+6.7) Dicas.30
+6.7.1) iRedMail...30
+6.7.2) Roteiro de Migração de Site para outra Hospedagem .35
+6.7.3) Testando sintaxes de configuração de Alguns Serviços ....36
+7) Instalação de Módulos do Apache, Extensões do PHP e Outros37
+7.1) MySQL....37
+7.2) PostgreSQL.....38
+7.3) Extensões do PHP.....40
+7.4) Habilitar Módulos do Apache.....40
+7.5) Permitir .htaccess 40
+8) Gerenciar donos e permissões do documentRoot (/var/www) ....42
+Criar Script para Facilitar o Trabalho43
+9) Criar Snapshot do servidor atual44
+10) Instalar os sites, aplicativos .....46
+10.1) Configurações....46
+11) Proteger alguns diretórios com senha pelo Apache ...48
+Bom tutorial sobre SSL no Apache 48
+12) Subdomínios e Domínios adicionais para um único servidor ...50
+Adicionar um Subdomínio .50
+12.1) Criar o Virtual Host no Apache50
+12.2) Adicionar o registro CNAME no DNS....50
+Adicionar um Novo Domínio ao mesmo Servidor/droplet...51
+12.3) Criar o Virtual Host no Apache51
+12.4) Adicionar o novo domínio ao DNS no painel........52
+13) Instalar o webmin .54
+14) Criar novo Snapshot..56
+20) Apêndices....58
+20.1) VPS.5820.2) Informações Impportantes sobre o iRedMail.......59
+20.3) Links úteis sobre Ununtu, VPS e cia64
+20.3) Dicas Extras..68
+20.3.1-Exportar livro de endereços do Gamail para ser importado no RoundCube...68
+20.3.2 -Trabalhando com o Painel Administrativo do DigitalOcean ...68
+20.3.3 - Resumo de comandos mais usados no Linux ..70
+20.3.4 - DigitalOcean Preços 73
+20.3.5 - Informações sobre DNS..73
+20.3.6 - Firewall Básico com UFW .......77
+20.3.7 - Solução de e-mail Zimbra........81
+20.3.8 - Instalando servidor e serviços no Amazon AWS .......85
+20.3.9 - Dicas para promover seu site..91
+20.3.10 – Testando desempenho de grandes servidores........94
+20.3.11 – Varrendo uma rede.94
+20.3.12 - Requisitos de Alguns CMS e Frameworks .....95
+20.3.13 - Codificação de Caracteres ....97
+20.3.14 - Gerenciamento de Usuários e Permissões.....98
+20.3.15 - Instalação e Configurações do Tomcat7....98
+20.3.16 - Acessar servidor através do Nautilus99
+</pre>
 
-<a href="JoomlaProgramacao.pdf">Download</a>
+<a href="email_vps.pdf">Download</a>
+
   </section><!-- End Hero -->
 
   <!-- ======= Footer ======= -->
