--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <li><a href="saude.html"><i class="bx bx-library"></i>Cuidando bem da Saúde</a></li>
           <li><a href="apps-php.html"><i class="bx bx-library"></i>Aplicativos em PHP</a></li>
           <li><a href="desenv-web.html"><i class="bx bx-library"></i>Desenvolvimento Web</a></li>
+          <li><a href="email-vps.html"><i class="bx bx-library"></i>Servidores de e-mail para VPS</a></li>
 
           <li><a href="desenv-web.html"><i class="bx bx-merge"></i>.</a></li>
         </ul>
@@ -77,61 +78,11 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
 
-    <h4 class="text-center">CakePHP 3 Aplicativos</h4>
+    <h4 class="text-center">Meus livros</h4>
 <div class="text-left">
 
-<p>A maior parte destas informa&ccedil;&otilde;es veio do site oficial do CakePHP, como tamb&eacute;m de outros sites. Alguma coisa eu traduzi do ingl&ecirc;s e pouca coisa veio da minha experi&ecirc;ncia.</p>
+<p>Já há algum tempo uma das atividades de que mais gosto é a de escrever e já tenho escrito vários livros e continuo escrevendo. Atualmente já são 14 livros em formato e-book e alguns oferecidos no formato impresso na editora Clube de Autores. Estão todos disponíveis free aqui neste site.</p>
 
-<p>0 &ndash; MVC&nbsp;&nbsp;&nbsp; 3<br />
-1 - Instala&ccedil;&atilde;o do CakePHP 3&nbsp;&nbsp;&nbsp; 7<br />
-2 - Conven&ccedil;&otilde;es no CakePHP 3&nbsp;&nbsp;&nbsp; 12<br />
-3 &ndash; Projeto&nbsp;&nbsp;&nbsp; 16<br />
-4 - Cria&ccedil;&atilde;o de um aplicativo tipo CRUD com Facilidade&nbsp;&nbsp;&nbsp; 18<br />
-5 - Gerando C&oacute;digo com Bake no CakePHP 3&nbsp;&nbsp;&nbsp; 22<br />
-6 &ndash; Configura&ccedil;&otilde;es&nbsp;&nbsp;&nbsp; 34<br />
-Configurando sua Aplica&ccedil;&atilde;o&nbsp;&nbsp;&nbsp; 34<br />
-Arquivos de configura&ccedil;&atilde;o do PHP&nbsp;&nbsp;&nbsp; 42<br />
-Arquivos de configura&ccedil;&atilde;o Ini&nbsp;&nbsp;&nbsp; 43<br />
-7 &ndash; Seguran&ccedil;a&nbsp;&nbsp;&nbsp; 54<br />
-8 &ndash; Debug e Erros&nbsp;&nbsp;&nbsp; 70<br />
-9 &ndash; Callbacks&nbsp;&nbsp;&nbsp; 76<br />
-10 &ndash; Constantes e Fun&ccedil;&otilde;es&nbsp;&nbsp;&nbsp; 79<br />
-11 &ndash; Ferramentas&nbsp;&nbsp;&nbsp; 84<br />
-11.2 - Faker + CakePHP = gourmet/faker&nbsp;&nbsp;&nbsp; 84<br />
-11.2 &ndash; phpDoc&nbsp;&nbsp;&nbsp; 86<br />
-11.3 &ndash; Convers&atilde;o para o CakePHP 3.6&nbsp;&nbsp;&nbsp; 87<br />
-12 &ndash; Model&nbsp;&nbsp;&nbsp; 89<br />
-12.1 &ndash; Valida&ccedil;&otilde;es&nbsp;&nbsp;&nbsp; 95<br />
-12.2 &ndash; ORM&nbsp;&nbsp;&nbsp; 111<br />
-13 &ndash; View&nbsp;&nbsp;&nbsp; 130<br />
-13.1 &ndash; Element&nbsp;&nbsp;&nbsp; 134<br />
-13.2 &ndash; Layouts&nbsp;&nbsp;&nbsp; 140<br />
-13.3 &ndash; Helper&nbsp;&nbsp;&nbsp; 142<br />
-13.3.1 &ndash; Forms&nbsp;&nbsp;&nbsp; 150<br />
-13.3.2 - HtmlHelper no CakePHP 3&nbsp;&nbsp;&nbsp; 167<br />
-13.3.3 &ndash; DateTime&nbsp;&nbsp;&nbsp; 175<br />
-14 &ndash; Controller&nbsp;&nbsp;&nbsp; 182<br />
-14.1 &ndash; Componentes&nbsp;&nbsp;&nbsp; 190<br />
-14.2 - Request e Response em CakePHP 3&nbsp;&nbsp;&nbsp; 198<br />
-14.3 &ndash; Routes&nbsp;&nbsp;&nbsp; 204<br />
-15 &ndash; Plugins&nbsp;&nbsp;&nbsp; 211<br />
-Plugin com controle de acesso para CakePHP 3&nbsp;&nbsp;&nbsp; 227<br />
-Criar banco e configurar.&nbsp;&nbsp;&nbsp; 227<br />
-16 &ndash; Dicas sobre o CakePHP 3&nbsp;&nbsp;&nbsp; 229<br />
-17 &ndash; Aplicativos de Exemplo&nbsp;&nbsp;&nbsp; 308<br />
-17.1 &ndash; CakePHP Ol&aacute;&nbsp;&nbsp;&nbsp; 308<br />
-17.2 &ndash; Blog&nbsp;&nbsp;&nbsp; 310<br />
-17.3 &ndash; Aplicativo com Bootstrap&nbsp;&nbsp;&nbsp; 313<br />
-17.4 &ndash; Aplicativo na Unha&nbsp;&nbsp;&nbsp; 315<br />
-17.5 &ndash; Aplicativo via C&oacute;digo&nbsp;&nbsp;&nbsp; 325<br />
-17.6 - CakePHP3 Treinamento&nbsp;&nbsp;&nbsp; 327<br />
-17.7 &ndash; Aplicativo Finan&ccedil;as Pessoais&nbsp;&nbsp;&nbsp; 350<br />
-17.8 - Fluxo de Informa&ccedil;&otilde;es entre controllers, models e view/templates&nbsp;&nbsp;&nbsp; 366<br />
-17.9 &ndash; CRUD em 4 Partes&nbsp;&nbsp;&nbsp; 368<br />
-17.10 &ndash; Aplicativo Controle de Estoque&nbsp;&nbsp;&nbsp; 382</p>
-
-
-<a href="CakePHPAplicativos.pdf">Download</a>
   </section><!-- End Hero -->
 
   <!-- ======= Footer ======= -->
