--- a/cakephp3appext.html
+++ b/cakephp3appext.html
@@ -62,6 +62,7 @@
           <li><a href="saude.html"><i class="bx bx-library"></i>Cuidando bem da Saúde</a></li>
           <li><a href="apps-php.html"><i class="bx bx-library"></i>Aplicativos em PHP</a></li>
           <li><a href="desenv-web.html"><i class="bx bx-library"></i>Desenvolvimento Web</a></li>
+          <li><a href="email-vps.html"><i class="bx bx-library"></i>Servidores de e-mail para VPS</a></li>
 
           <li><a href="desenv-web.html"><i class="bx bx-merge"></i>.</a></li>
         </ul>
